--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="empaticaE4DisplayName">E4</string>
+    <string name="empatica_failed">Empatica E4 failed. Please enable internet and bluetooth and restart the
+        Empatica plugin or this app.
+    </string>
 </resources>
