Added plugin description and reduced imports

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="empaticaE4DisplayName">E4</string>
+    <string name="empatica_e4_explanation">Empatica E4 collects heart rate, blood volume pulse and
+        acceleration, and electrodermal activity. Connect an Empatica E4 by pressing the
+        power-button. It needs Bluetooth and location permissions to communicate efficiently. The
+        location permission is not used to find your location.
+    </string>
 </resources>
