--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
         power-button. It needs Bluetooth and location permissions to communicate efficiently. The
         location permission is not used to find your location.
     </string>
+    <string name="empatica_failed">Empatica E4 failed. Please enable internet and bluetooth and restart the
+        Empatica plugin or this app.
+    </string>
 </resources>
